Fix fetching albums too much

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -113,9 +113,7 @@
     position: absolute;
     height: 100vh;
 }
-
-
-.album-index {
+.profile-album-index {
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
@@ -157,3 +155,4 @@
                         font-size: 12px;
                         text-decoration: none;
                     }
+
